# GPT-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gptfs/inference/: __init__.py  generate.py
src/gptfs/model/: __init__.py  feed_forward_neural_network.py  gpt.py  multi_head_self_attention.py  single_head_attention.py  transformer_block.py
src/gptfs/training/: __init__.py  train.py  training_config.py
tests/: test_multi_head_self_attention.py  test_single_head_attention.py
tests/integration/: test_generate_with_gpt.py
tests/unit/: test_feed_forward_neural_network.py  test_generate.py  test_gpt.py  test_single_head_attention.py  test_transformer_block.py
