[tool.poetry]
name = "gptfs"
version = "0.1.0"
description = "GPT-from-scratch in PyTorch refactored into a testable production style codebase"
readme = "README.md"
packages = [{ include = "gptfs", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.1"
numpy = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ruff = "^0.15.0"
pre-commit = "^4.5.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]